tests/ui/task_payload_missing_task_type.rs
use asynqrs::TaskPayload;
use serde::{Deserialize, Serialize};

#[derive(Debug, PartialEq, Eq, Serialize, Deserialize, TaskPayload)]
struct MissingTaskType {
    user_id: u64,
}

fn main() {}
